# health-ai-readiness-robustness

./: .env.example  .gitignore  CITATION.cff  LICENSE  LICENSE-CC-BY-4.0.md  PAPER.md  README.md
arxiv/: main.tex
configs/: study-endpoints.toml
environments/healthbench_robust/: README.md  healthbench_robust.py  pyproject.toml
environments/medrobust/: README.md  medrobust.py  pyproject.toml
manuscript/: ethics_self_assessment.md
patches/: judge_helpers.patch
runs/final/: cells.csv  final_study.md  raw_counts.md  robustness_summary.csv
runs/final_supplementary/: STATUS.md  medmcqa_n200.csv  medmcqa_n200.md  medqa_n300.csv  medqa_n300.md  paired_medqa.json  paired_medqa.md  rollout_variance.md
runs/human_eval/: PROVENANCE.md  confusion_matrices.md  human_labels.csv  human_reference_strengthened.json  human_reference_strengthened.md  human_validity.json  human_validity.md  human_validity_multi.json  human_validity_multi.md  key.json  labels_G.csv  labels_O.csv  perturbation_audit.csv  perturbation_validity.json  (+1 more)
scripts/: arxiv-header.tex  bucket2_artifacts.py  build_arxiv.sh  consolidate_study.py  consolidate_supplementary.py  estimate_cost.py  evaluator_analyses.py  human_reference_strengthened.py  make_annotation_sheet.py  make_annotator_packets.py  paired_medqa_stats.py  panel_figures.py  panel_rejudge.py  pdf-header.tex  perturbation_validity.py  plot_robustness_study.py  rerun_failed_supplementary.sh  rollout_variance.py  run_robustness_study.py  run_supplementary.sh  score_human_eval.py  score_human_eval_multi.py  self_preference_adjusted.py
(+70 files in other folders)
