[project]
name = "medrobust"
version = "0.1.0"
description = "Robustness stress-test layer over MedARC MCQ benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.0.0",
    "verifiers>=0.1.12,<0.2",
    "medarc-verifiers>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medrobust.py"]

[tool.prime.environment]
loader = "medrobust:load_environment"
display_name = "MedRobust"
visibility = "PRIVATE"

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 1
